--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,10 +11,12 @@ if(ENABLE_PARALLEL)
 	add_library(${project_name}parallel_lib SHARED ${PROJECT_SOURCE_DIR}/parallel_lib/src/utils.c)
 	set(includes ${PROJECT_SOURCE_DIR}/parallel_lib/include)
 	set(library_name ${project_name}parallel_lib)
+	set(libsources ${PROJECT_SOURCE_DIR}/parallel_lib/src)
 else()
 	add_library(${project_name}consistent_lib STATIC ${PROJECT_SOURCE_DIR}/consistent_lib/src/utils.c)
 	set(includes ${PROJECT_SOURCE_DIR}/consistent_lib/include)
 	set(library_name ${project_name}consistent_lib)
+	set(libsources ${PROJECT_SOURCE_DIR}/consistent_lib/src)
 endif()
 
 if(ENABLE_COVERAGE)
@@ -25,7 +27,9 @@ endif()
 include_directories(${includes})
 
 enable_testing()
+add_subdirectory(googletest)
 add_subdirectory(test)
+
 
 add_executable(${project_name} main.c)
 
