--- a/.travis.yml
+++ b/.travis.yml
@@ -30,14 +30,14 @@ script:
   - cmake ..
   - cmake --build .
   - ctest
-  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then valgrind --tool=memcheck --leak-check=yes ./test/project_tests ; fi
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then valgrind --tool=memcheck --leak-check=yes ctest ; fi
   - cd ..
   - rm -rf build
   - mkdir build
   - cd build
-  - cmake -DENABLE_PARALLEL=ON ..
+  - cmake -DENABLE_PARALLEL=ON -DENABLE_COVERAGE=ON ..
   - cmake --build .
   - ctest
-  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then valgrind --tool=memcheck --leak-check=yes ./test/project_tests ; fi
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then valgrind --tool=memcheck --leak-check=yes ctest ; fi
   - cd ..
-  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then cppcheck --enable=all --error-exitcode=1 -I include --suppress=missingIncludeSystem ./src ./include/*.h --check-config ; fi
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then cppcheck --enable=all --error-exitcode=1 -I include --suppress=missingIncludeSystem ./parallel_lib ./consistent_lib/include/*.h --check-config ; fi
