--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,6 @@ addons:
       - cppcheck
       - make
       - cmake
-      - python2.7
       - libgtest-dev
       - lcov
 
@@ -40,4 +39,7 @@ script:
   - ctest
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then valgrind --tool=memcheck --leak-check=yes ctest ; fi
   - cd ..
-  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then cppcheck --enable=all --error-exitcode=1 -I include --suppress=missingIncludeSystem ./parallel_lib ./consistent_lib/include/*.h --check-config ; fi
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then cppcheck --enable=all --error-exitcode=1 -I parallel_lib/include consistent_lib/include --suppress=missingIncludeSystem ./parallel_lib ./consistent_lib main.c --check-config ; fi
+  
+  after_success:
+  - coveralls --root .. --build-root . -E ".*CMakeFiles.*" -E ".*googletest*" --gcov /usr/bin/gcov --gcov-options '\-lp'
