--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,10 @@ os:
   - linux
 
 compiler:
-  # ... и с помощью GCC, и Clang
+
   - gcc
+
+
 
 addons:
   apt:
@@ -29,7 +31,7 @@ script:
   - cmake ..
   - cmake --build .
   - ctest
-  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then valgrind --tool=memcheck --leak-check=yes ctest ; fi
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then valgrind --tool=memcheck --leak-check=full --show-leak-kinds=all --leak-check=yes ctest ; fi
   - cd ..
   - rm -rf build
   - mkdir build
@@ -43,3 +45,4 @@ script:
 
 after_success:
   - coveralls --root .. --build-root . -E ".*CMakeFiles.*" -E ".*googletest*" --gcov /usr/bin/gcov --gcov-options '\-lp'
+
