--- a/.travis.yml
+++ b/.travis.yml
@@ -32,6 +32,7 @@ script:
   - cmake --build .
   - ctest
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then valgrind --tool=memcheck --leak-check=full --show-leak-kinds=all --leak-check=yes ./test/project_test ; fi
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; ./write_test ../test/data/btests_emails_big.eml ; fi
   - cd ..
   - rm -rf build
   - mkdir build
@@ -40,6 +41,7 @@ script:
   - cmake --build .
   - ctest
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then valgrind --tool=memcheck --leak-check=full --show-leak-kinds=all --leak-check=yes ./test/project_test ; fi
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; ./read_test ../test/data/btests_emails_big.eml ; fi
   - cd ..
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then cppcheck --enable=all --error-exitcode=1 -I parallel_lib/include consistent_lib/include --suppress=missingIncludeSystem ./parallel_lib ./consistent_lib main.c --check-config ; fi
 
