--- a/.travis.yml
+++ b/.travis.yml
@@ -30,18 +30,16 @@ script:
   - cd build
   - cmake ..
   - cmake --build .
-  - ctest
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then valgrind --tool=memcheck --leak-check=full --show-leak-kinds=all --leak-check=yes ./test/project_test ; fi
-  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; ./write_test ../test/data/btests_emails_big.eml ; fi
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then ./write_test ../test/data/btests_emails_big.eml ; fi
   - cd ..
   - rm -rf build
   - mkdir build
   - cd build
   - cmake -DENABLE_PARALLEL=ON -DENABLE_COVERAGE=ON ..
   - cmake --build .
-  - ctest
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then valgrind --tool=memcheck --leak-check=full --show-leak-kinds=all --leak-check=yes ./test/project_test ; fi
-  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; ./read_test ../test/data/btests_emails_big.eml ; fi
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then ./read_test ../test/data/btests_emails_big.eml ; fi
   - cd ..
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then cppcheck --enable=all --error-exitcode=1 -I parallel_lib/include consistent_lib/include --suppress=missingIncludeSystem ./parallel_lib ./consistent_lib main.c --check-config ; fi
 
