--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,7 @@ script:
   - pip install --user cpp-coveralls
   - mkdir build
   - cd build
-  - cmake ..
+  - cmake -DENABLE_COVERAGE=ON ..
   - cmake --build .
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then valgrind --tool=memcheck --leak-check=full --show-leak-kinds=all --leak-check=yes ./test/project_test ; fi
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then ./write_test ../test/data/btests_emails_big.eml ; fi
